# thermostat

./: .clangd  .cproject  .gitignore  .project  CMakeLists.txt  sdkconfig  sdkconfig.old  sz.txt  tweaks.txt
certs/: .gitignore  secrets.txt
lcd/: boot_screen.c  boot_screen.h  lcd.c  lcd.h  le.h  lv_conf.h  main_screen.c  main_screen.h  option_screen.c  option_screen.h  spi_lcd_touch_example_main.c  state_screen.c  state_screen.h  styles.c  styles.h  ui.c  ui.h  ui_font_hemihead60.c  ui_font_segblack16.c  ui_font_segblack20.c
lcd/images/: ui_img_frame_00_png.c  ui_img_wifi_error_png.c  ui_img_wifi_png.c
main/: CMakeLists.txt  config.c  config.h  idf_component.yml  idf_component.yml__  main.c  project_specific.h  temps.c  temps.h
nvs_part/: .gitignore
